--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -11,14 +12,18 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-html-parser": "2.0.2",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.3.2",
+    "antd": "^4.18.2",
     "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-html-parser": "2.0.2",
     "react-redux": "^7.2.0",
     "react-router-dom": "5",
     "react-scripts": "5.0.0",
+    "sass": "^1.45.2",
     "typescript": "~4.1.5"
   },
   "scripts": {
