--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
-    "@types/react-html-parser": "2.0.2",
+    "@types/react-html-parser": "^2.0.2",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.3.2",
     "antd": "^4.18.2",
     "axios": "^0.24.0",
+    "buffer": "^6.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-html-parser": "2.0.2",
+    "react-html-parser": "^2.0.2",
     "react-redux": "^7.2.0",
     "react-router-dom": "5",
     "react-scripts": "5.0.0",
