--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "antd": "^4.18.2",
     "axios": "^0.24.0",
     "buffer": "^6.0.3",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-html-parser": "^2.0.2",
@@ -25,7 +26,8 @@
     "react-router-dom": "5",
     "react-scripts": "5.0.0",
     "sass": "^1.45.2",
-    "typescript": "~4.1.5"
+    "typescript": "~4.1.5",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -47,5 +49,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.178",
+    "@types/uuid": "^8.3.4"
   }
 }
